# Membranes

./: .gitignore  Cargo.toml  README.md  package.json
crates/iz_membranes_threshold_CreateEntryCount/: Cargo.toml
crates/iz_membranes_threshold_CreateEntryCount/src/: CreateEntryCountThreshold.rs  VouchThreshold.rs  lib.rs  validate.rs
crates/membranes/: Cargo.toml
crates/membranes/src/: anchors.rs  callbacks.rs  claim.rs  claim_membrane.rs  claim_role.rs  constants.rs  get.rs  lib.rs  membrane.rs  misc.rs  path_kind.rs  progenitor.rs  publish.rs  register.rs  role.rs  vouch.rs
crates/membranes_integrity/: Cargo.toml
crates/membranes_integrity/src/: lib.rs  validate.rs  validate_app_entry.rs  zome_properties.rs
crates/membranes_model/: Cargo.toml
crates/membranes_model/src/: constants.rs  entries.rs  entries_threshold.rs  lib.rs  links.rs  privilege.rs  threshold.rs
crates/membranes_types/: Cargo.toml
crates/membranes_types/src/: constants.rs  entries.rs  entries_threshold.rs  lib.rs  privilege.rs  zfn_io.rs
crates/threshold_CreateEntryCount/: Cargo.toml
crates/threshold_CreateEntryCount/src/: lib.rs  threshold.rs
crates/threshold_CreateEntryCount_integrity/: Cargo.toml
crates/threshold_CreateEntryCount_integrity/src/: lib.rs  validate.rs
crates/threshold_CreateEntryCount_types/: Cargo.toml
crates/threshold_CreateEntryCount_types/src/: lib.rs
crates/threshold_Progenitor/: Cargo.toml
crates/threshold_Progenitor/src/: lib.rs  threshold.rs
crates/threshold_Progenitor_integrity/: Cargo.toml
crates/threshold_Progenitor_integrity/src/: lib.rs  validate.rs  zome_properties.rs
crates/threshold_Progenitor_types/: Cargo.toml
crates/threshold_Progenitor_types/src/: lib.rs
crates/threshold_Vouch/: Cargo.toml
crates/threshold_Vouch/src/: lib.rs  threshold.rs  vouch.rs
crates/threshold_Vouch_integrity/: Cargo.toml
crates/threshold_Vouch_integrity/src/: lib.rs  validate.rs
crates/threshold_Vouch_types/: Cargo.toml
crates/threshold_Vouch_types/src/: lib.rs
examples/webapp/: index.html  package.json  tsconfig.json
examples/webapp/src/: app.ts  holochain.service.ts  holochain.store.ts  index.ts  types.ts
examples/webapp/src/elements/: controller.ts
examples/workdir/: dna.yaml
examples/zomes/agent_directory/: Cargo.toml
examples/zomes/agent_directory/src/: lib.rs
examples/zomes/tasker/: Cargo.toml
examples/zomes/tasker/src/: basic_callbacks.rs  basic_functions.rs  callbacks.rs  lib.rs  membraned_callbacks.rs  membraned_functions.rs  ui.rs
examples/zomes/tasker_model/: Cargo.toml
examples/zomes/tasker_model/src/: lib.rs
playground/webapp/: index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
playground/webapp/src/: agent_directory.bridge.ts  agent_directory.vm.ts  app.ts  constants.ts  holochain.service.ts  holochain.store.ts  index.ts  tasker.bridge.ts  tasker.dvm.ts  tasker.proxy.ts  tasker.types.ts  tasker.vm.ts  tasker.zvm.ts  types.ts
playground/webapp/src/bindings/: tasker.fn.ts  tasker.proxy.ts  tasker.ts  tasker.types.ts
playground/webapp/src/elements/: agent-directory-dashboard.ts  controller.ts  membranes-controller.ts  tasker-page.ts
playground/webapp/src/viewModel/: defs.ts  tasker.bindings.ts  tasker.dvm.ts  tasker.perspective.ts  tasker.proxy.ts  tasker.zvm.ts
playground/workdir/: dna.yaml  happ.yaml
playground/zomes/agent_directory/: Cargo.toml
playground/zomes/agent_directory/src/: functions.rs  init.rs  lib.rs  paths.rs
playground/zomes/agent_directory_integrity/: Cargo.toml
playground/zomes/agent_directory_integrity/src/: component_copypasta.rs  lib.rs
playground/zomes/tasker/: Cargo.toml
playground/zomes/tasker/src/: basic_callbacks.rs  basic_functions.rs  get.rs  helpers.rs  init_membranes.rs  lib.rs  membraned_callbacks.rs  membraned_functions.rs  ui.rs
playground/zomes/tasker_model/: Cargo.toml
playground/zomes/tasker_model/src/: lib.rs  validate.rs
scripts/: clean-npm.sh  clean.sh  install-hc-tools.sh  pack-happ.sh  ts-bindings.sh
webcomponents/: package.json  tsconfig.json
webcomponents/src/: index.ts  membranes.bindings.ts  membranes.bridge.ts  membranes.perspective.ts  membranes.proxy.ts  membranes.types.ts  membranes.view_model.ts  membranes.vm.ts  membranes.zvm.ts
webcomponents/src/bindings/: createEntryCount.fn.ts  createEntryCount.proxy.ts  createEntryCount.types.ts  membranes.fn.ts  membranes.proxy.ts  membranes.ts  membranes.types.ts  progenitor.fn.ts  progenitor.proxy.ts  progenitor.types.ts  vouch.fn.ts  vouch.proxy.ts  vouch.types.ts
webcomponents/src/elements/: create-cec-threshold.ts  create-entry-dashboard.ts  create-vouch-threshold.ts  membranes-controller.ts  membranes-creator-page.ts  membranes-dashboard.ts  vouch-dashboard.ts
webcomponents/src/viewModel/: createEntryCount.zvm.ts  membranes.perspective.ts  membranes.zvm.ts  vouch.zvm.ts
