[workspace]
resolver = "2"
members = [
  "crates/membranes_types",
  "crates/membranes_integrity",
  "crates/membranes",
  "playground/zomes/tasker_model",
  "playground/zomes/tasker",  
  "playground/zomes/agent_directory",
  "playground/zomes/agent_directory_integrity",
  #"sweettest",
]

[workspace.package]
version = "0.2.0-hdk-brc.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
hdi = { version = "0.2.0-beta-rc.0", default-features = false }
hdk = { version = "0.1.0-beta-rc.0", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "beta.rc.1" }

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true

[profile.release.build-override]
opt-level = "z"
