[package]
name = "threshold_CreateEntryCount"
version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

membranes_integrity = { path = "../membranes_integrity" }
membranes_types = { path = "../membranes_types" }
threshold_CreateEntryCount_types = { path = "../threshold_CreateEntryCount_types"}
threshold_CreateEntryCount_integrity = {path = "../threshold_CreateEntryCount_integrity"}