[package]
name = "tasker"
version = "0.1.0-hdk.154"
edition = "2021"

[lib]
name = "tasker"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }

hdk = { version = "0.0.154", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "dev" }

membranes_types = {path = "../../../crates/membranes_types" }

tasker_model = {path = "../tasker_model" }
