[package]
name = "tasker_model"
version = "0.1.0-hdk.154"
edition = "2021"

[lib]
name = "tasker_model"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }

hdi = { version = "0.1.3", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }
#membranes_types = {path = "../../../crates/types" }