[package]
name = "tasker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

membranes_types = {path = "../../../crates/membranes_types" }
tasker_model = {path = "../tasker_model" }
